# rice-timer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  sdkconfig.default  sdkconfig.defaults
components/adafruit-bno055/: CMakeLists.txt
components/adafruit-busio/: CMakeLists.txt
components/adafruit-gfx-library/: CMakeLists.txt
components/adafruit-led-backpack/: CMakeLists.txt
components/adafruit-sensor/: CMakeLists.txt
components/adafruit-sh110x/: CMakeLists.txt
components/eigen/: CMakeLists.txt
components/geographiclib/: CMakeLists.txt
components/minmea/: CMakeLists.txt
components/minmea/minmea/: minmea.h
components/ringbuf/: CMakeLists.txt
components/scope_guard/: CMakeLists.txt
data/dbc/: 982.dbc  README.md  fk8.dbc  j29.dbc
data/map/: README.md  laguna-seca.json  laguna-seca.osm  laguna-seca.toml  map.schema.json  thunderhill-east.json  thunderhill-east.osm  thunderhill.osm  thunderhill.toml
data/profile/: 982.toml  fk8.toml  j29.toml
doc/: sample-log.txt
experimental/: osm_test.ipynb
experimental/g473/: g473.ioc
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware-g473/: .cproject  .mxproject  .project  STM32G473CETX_FLASH.ld  STM32G473CETX_RAM.ld  rice-timer-g473 Debug.launch  rice-timer-g473.ioc
firmware-v3-esp32/: sdkconfig.defaults
firmware-v3-esp32/main/: CMakeLists.txt  app_main.cpp  priorities.hpp
firmware-v3-esp32/partition_table/: partitionTable.csv
firmware-v4-rt1064/: .cproject  .gitignore  .project  firmware-v4-rt1064.mex
firmware-v4-rt1064/board/: clock_config.c  clock_config.h  dcd.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
firmware/components/flatbuffers/: CMakeLists.txt
firmware/components/geographiclib/: CMakeLists.txt
firmware/components/ringbuf/ringbuf_c/: utils.h
firmware/components/scope_guard/scope_guard/: scope_guard.hpp
firmware/components/sdmmc/: sdmmc_cmd.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  priorities.hpp  run_tests.hpp
firmware/main/app/: can_instance.cpp  gps_instance.cpp  heartbeat.cpp  imu_instance.cpp  lap_timer.cpp  onboard_analysis.cpp  sd_card_instance.cpp  shared_i2c_bus.cpp
firmware/main/app/analysis/: checkpoint_detector.cpp  checkpoint_detector.hpp  lap_timer.hpp  onboard_analysis.cpp  onboard_analysis.hpp  onboard_analysis_instance.cpp  onboard_analysis_instance.hpp  onboard_analysis_sim_command.inl.cpp  tracer.cpp  tracer.hpp
firmware/main/common/: circular_buffer.hpp  console_command_registry.cpp  i2c_helpers.hpp  iter.hpp  line_buffer_mpsc.hpp  macros.hpp  mutex.hpp  perf.cpp  polyfill.hpp  times.hpp  utils.hpp
firmware/main/device/: can.cpp  capture_manager.cpp  capture_manager.hpp  gps_daemon.cpp  gps_daemon.hpp  gps_driver_ublox.cpp  gps_driver_ublox.hpp  gps_utils.cpp  gps_utils.hpp  imu_driver_lsm6dsr.cpp  imu_driver_lsm6dsr.hpp  oled_ssd1309.cpp
firmware/main/interface/: lap_trace.hpp  localization.hpp
firmware/main/io/: autobaud.cpp  fs_utils.cpp  fs_utils.hpp  logger.cpp  logger.hpp  sd_card_daemon.cpp  uart_line_reader.cpp  uart_line_reader.hpp
firmware/main/localization/: gps_collector.cpp  gps_collector.hpp  localizer.cpp  localizer.hpp
firmware/main/map/: map.cpp  map.hpp  map_index.cpp  map_index.hpp  utils.hpp
firmware/main/math/: polyfill.hpp  segment2.hpp  utils.hpp
firmware/main/test/: CMakeLists.txt
firmware/main/test/common/: test_circular_buffer.cpp
firmware/main/ui/: controller.cpp  controller.hpp  display.hpp  encoder_button_input.cpp  encoder_button_input.hpp  model.hpp  style.hpp
firmware/main/ui/fonts/: cozette13.c  spleen24.c
firmware/main/ui/view/: common.hpp  debug_screen.hpp  idle_screen.hpp  screen.hpp  track_timer_screen.hpp
flatbuffers/: common.fbs  map.fbs
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  arduino_wrapper.cpp  can.cpp  capture_manager.cpp  capture_manager.hpp  common.cpp  common.hpp  display.cpp  display.hpp  filesystem.cpp  filesystem.hpp  gps.cpp  gps.hpp  imu.cpp  imu.hpp  logger.cpp  logger.hpp  lvgl_tick.c  lvgl_tick.h  nmea_parser.c  nmea_parser.h  pps.cpp  pps.hpp  priorities.hpp
main/app/: can_instance.cpp  can_instance.hpp  device_id.cpp  device_id.hpp  encoder_button_input.cpp  encoder_button_input.hpp  gps_instance.cpp  gps_instance.hpp  imu_instance.cpp  imu_instance.hpp  lap_timer.cpp  lap_timer.hpp  logger.cpp  logger.hpp  logger_instance.cpp  logger_instance.hpp  oled_instance.cpp  oled_instance.hpp  priorities.hpp  sd_card_instance.cpp  sd_card_instance.hpp  shared_i2c_bus.cpp  shared_i2c_bus.hpp  shared_spi_bus.cpp
main/common/: button_helper.hpp  isr_yielder.hpp  line_buffer_mpsc.cpp  logging.hpp  macros.hpp  perishable.hpp  strings.hpp  task.hpp  times.hpp  utils.hpp
main/device/: can.cpp  can.hpp  capture_manager.cpp  capture_manager.hpp  encoder.cpp  encoder.hpp  gps.cpp  gps.hpp  gps_daemon.cpp  gps_daemon.hpp  gps_driver_mtk.cpp  gps_driver_mtk.hpp  gps_driver_ublox.cpp  gps_driver_ublox.hpp  gps_utils.cpp  gps_utils.hpp  imu_driver_lsm6dsr.cpp  imu_driver_lsm6dsr.hpp  oled_ssd1309.cpp  oled_ssd1309.hpp
main/io/: autobaud.cpp  autobaud.hpp  filesystem.cpp  filesystem.hpp  fs_utils.cpp  fs_utils.hpp  logger.cpp  logger.hpp  sd_card_daemon.cpp  sd_card_daemon.hpp  uart_line_reader.cpp  uart_line_reader.hpp
main/map/: car_pose.hpp
main/math/: polyfill.hpp  segment2.hpp  utils.hpp
main/ui/: controller.cpp  controller.hpp  display.cpp  encoder_button_input.cpp  encoder_button_input.hpp  model.cpp  model.hpp  style.cpp  style.hpp  view.cpp  view.hpp  view_impl.hpp
main/ui/fonts/: README.md  caecilia18.c  caecilia22b.c  consolas10.c  consolas8.c  cozette13.c  creep211.c  iosevka10l.c  iosevka12.c  liberation18bn.c  liberation22bn.c  liberation8n.c  mononoki10.c  mononoki22.c  notomono8.c  notomono9.c  pixerif16.c  spleen24.c
main/ui/view/: common.hpp  debug_screen.hpp  debug_view.hpp  idle_screen.hpp  root.hpp  screen.hpp  softkey_prompt.hpp  track_lobby_screen.hpp  track_req_screen.hpp  track_sel_screen.hpp  track_timer_screen.hpp
ricetimer/: __init__.py  main.py
(+109 files in other folders)
