[tool.poetry]
name = "ricetimer"
version = "0.1.0"
description = "Supporting tools and resources for the Rice Timer project"
authors = ["summivox <summivox@github.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "=3.9"
click = "^8.0.1"
numpy = "^1.21.0"
pynmea2 = "^1.18.0"
pytz = "^2021.1"
numba = "^0.53.1"
timezonefinder = {extras = ["numba"], version = "^5.2.0"}
cantools = "^36.2.0"
defusedxml = "^0.7.1"
flatbuffers = "^2.0"
more-itertools = "^8.8.0"
coloredlogs = "^15.0.1"
colorama = "^0.4.4"
click-spinner = "^0.1.10"
# FUCK poetry for not allowing the user to override this STUPID and POINTLESS restriction!
scipy = { version = "^1.7.0", python = ">=3.8,<3.10" }
pandas = "^1.2.5"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
autopep8 = "^1.5.7"
ipykernel = "^5.5.5"
plotly = "^5.1.0"
ipywidgets = "^7.6.3"
python-can = "^3.3.4"
pyserial = "^3.5"

[tool.poetry.scripts]
ricetimer = "ricetimer.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
